# my-first-rust-api

./: Cargo.toml  LICENSE  README.md
src/: main.rs
src/controllers/: root.rs
